# Uni-Work

./: README.md
C Programming/: 1-Bubble Sort.c  WordSearch.c
C# Unity/AI Game Project/: CommandoMovement.cs  DamageByCollision.cs  DroneTargetClosest.cs  EnemyDetector.cs  EnemyOffensiveDetector.cs  GameController.cs  Health.cs  MeleeMovement.cs  README.md  ShotController.cs  SkirmishMovement.cs
Computer Vision (C++)/: README.md
Computer Vision (C++)/Image/: CMakeLists.txt  test_matlab.m
Computer Vision (C++)/Image Processing/: CMakeLists.txt  testing.m
Computer Vision (C++)/Image/include/: Image.h
Computer Vision (C++)/Image/src/: Image.cpp  test.cpp
Computer Vision (C++)/OpenCV/: edgeDetection3.cxx  videoFromCamera.cxx
Java/BST vs Sorted Array/: BSTTester.java  BinarySearchTree.java  Node.java  SortedArrayTester.java
Java/Balls 2DGraphics/: Ball.java  BallComponent.java  ThreadedBallsFrame.java  ThreadedBallsMain.java
Java/Bank Account/: App.java  BankAccount.java  BankAccountViewer.java
Java/Calculator/: Calculator.java  CalculatorFrame.java  CalculatorTester.java  CalculatorViewer.java
Java/Database Connections/: 1-destroy.sql  2-create.sql  3-insert.sql  App.java  ConnectionTester.java  DatabaseCLI.java  DatabaseMain.java  DatabaseManager.java  (+1 more)
MATLAB Ocatve/: Nmc_test.m  README.md  Regression2.m  colour_balance.m  eye_detector_improved.m  my_kmeans.m  nmc.m  one_nn.m  rescaler.m  train_rbf.m
Processing (Java)/: Circle.pde  Line.pde  Rectangle.pde  Tessellator.pde  main.pde
Python/: TextAdventure.py
SQL/: HealthBoardPhysical.sql
(+62 files in other folders)
